[gd_scene load_steps=7 format=3 uid="uid://ctu0fbvqfkcwf"]

[ext_resource type="Script" path="res://player_score.gd" id="1_52t4d"]
[ext_resource type="FontFile" uid="uid://bnbjxfbrglbpl" path="res://font/Grandstander-ExtraBold.ttf" id="3_8ce5n"]
[ext_resource type="Texture2D" uid="uid://cp4e1nk1hta8i" path="res://art/small_star7_yellow.png" id="3_uv02q"]
[ext_resource type="AudioStream" uid="uid://dajbrjqhd4cfq" path="res://audio/Success5.wav" id="4_rg5g1"]

[sub_resource type="Gradient" id="Gradient_gdxcl"]
offsets = PackedFloat32Array(0.644737, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_l5ekd"]
font = ExtResource("3_8ce5n")
font_size = 180
outline_size = 36
outline_color = Color(0.305882, 0, 0.145098, 1)

[node name="PlayerScore" type="Node2D"]
z_index = 128
script = ExtResource("1_52t4d")
debug = true
tick_rate = 5

[node name="Starburst1" type="CPUParticles2D" parent="."]
position = Vector2(788, 15)
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
texture = ExtResource("3_uv02q")
direction = Vector2(2.08165e-12, 2.08165e-12)
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 448.06
initial_velocity_max = 1000.0
angular_velocity_min = 26.18
angular_velocity_max = 141.38
linear_accel_min = -100.0
linear_accel_max = -58.18
scale_amount_min = 0.3
scale_amount_max = 0.5
color_ramp = SubResource("Gradient_gdxcl")

[node name="Starburst2" type="CPUParticles2D" parent="."]
position = Vector2(405, -1)
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
texture = ExtResource("3_uv02q")
direction = Vector2(2.08165e-12, 2.08165e-12)
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 448.06
initial_velocity_max = 1000.0
angular_velocity_min = 26.18
angular_velocity_max = 141.38
linear_accel_min = -100.0
linear_accel_max = -58.18
scale_amount_min = 0.3
scale_amount_max = 0.5
color_ramp = SubResource("Gradient_gdxcl")

[node name="Starburst3" type="CPUParticles2D" parent="."]
position = Vector2(617, 170)
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
texture = ExtResource("3_uv02q")
direction = Vector2(2.08165e-12, 2.08165e-12)
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 448.06
initial_velocity_max = 1000.0
angular_velocity_min = 26.18
angular_velocity_max = 141.38
linear_accel_min = -100.0
linear_accel_max = -58.18
scale_amount_min = 0.3
scale_amount_max = 0.5
color_ramp = SubResource("Gradient_gdxcl")

[node name="Label" type="Label" parent="."]
offset_right = 1216.0
offset_bottom = 183.0
text = "$0"
label_settings = SubResource("LabelSettings_l5ekd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="FinishedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rg5g1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
